Fri May  1 01:31:19 2009  Tanaka Akira  <akr@fsij.org>

	* ext/extmk.rb: use RbConfig instead of Config.

	* instruby.rb: ditto.

	* lib/rubygems.rb: ditto.

	* test/rubygems/test_config.rb: ditto.

Thu Apr 30 21:23:30 2009  Tanaka Akira  <akr@fsij.org>

	* runruby.rb: use RbConfig::CONFIG instead of Config::CONFIG.

	* spec/default.mspec: ditto.

	* yarvtest/yarvtest.rb: ditto.

	* instruby.rb: ditto.

	* benchmark/report.rb: ditto.

	* benchmark/runc.rb: ditto.

	* tool/eval.rb: ditto.

	* test/rubygems/test_gem.rb: ditto.

	* test/rubygems/test_config.rb: ditto.

	* test/rubygems/test_gem_platform.rb: ditto.

Thu Apr 30 18:18:13 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/http.rb: documentation typo fixed.  [ruby-core:23335]

Thu Apr 30 15:27:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/utf8_mac.trans: get rid of a 1.9 feature for cross
	  compile.

Thu Apr 30 11:35:30 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_filesystem_encoding): Change filesystem_encoding of
	  Mac OS X to UTF-8.

Wed Apr 29 21:23:40 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/iso_2022_jp.h: add CP50221.

	* enc/trans/iso2022.trans: add converter for CP50221.

Wed Apr 29 15:22:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): recursive array has no meaning as path
	  name.  [ruby-core:23329]

Tue Apr 28 19:09:45 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/test_timeout.rb (TestTimeout#test_timeout): add a test.

Tue Apr 28 07:13:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (Struct#pretty_print): coerce to a string since
	  anonymous class has name no longer.  [ruby-dev:38349]

Mon Apr 27 16:47:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ruby_version): uses sed instead of grep if the
	  result is need, to get rid of GREP_OPTIONS.  [ruby-dev:38336]

Mon Apr 27 01:25:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
